# droux-rust

./: .Cargo.toml.swp  .dockerignore  .env  .env.dev  .gitignore  Cargo.toml  Dockerfile  Dockerfile_?  Dockerfile_old  README.md  Rocket.dev.toml  Rocket.toml  backup.txt  docker-compose.develop.yml  docker-compose.yml  init-letsencrypt.sh  main.yml  product_instance.html.tera
.github/workflows/: main.yml  main_prod.yml
SQL/: filter.sql  get_dialogues.sql  get_favourites.sql  get_in_news.sql  get_products_admin.sql  me_subs_list.sql  product.sql  rating.sql  select_new_for_product_card.sql  select_popular_by_seller.sql  select_recently_added.sql  select_top_views.sql  subs_list.sql
cron/: Dockerfile  run.sh
cron_dev/: entrypoint.sh  run.sh
data/nginx/: app.conf
data/nginx_dev/: app.conf
github/workflows/: main.yml
migrations/2020-09-28-233846_priveleges/: down.sql  up.sql
migrations/2020-09-29-005832_users/: down.sql  up.sql
migrations/2020-09-29-013948_products/: up.sql
migrations/2020-09-29-020522_favourites/: down.sql  up.sql
migrations/2020-09-29-020704_chat/: down.sql  up.sql
migrations/2020-09-29-021328_rating/: down.sql  up.sql
nginx/: Dockerfile  droux.crt  droux.csr  droux.csr.txt  droux.key
nginx/conf.d/: app.conf  droux.key
src/: .auth.rs.swp  .crm.rs.swp  .users.rs.swp  admin.rs  auth.rs  crm.rs  lib.rs  main.rs  schema.rs  users.rs
templates/: admin_pannel.html.tera  filters.html.tera  filters_old.html.tera  footer.html.tera  head.html.tera  header.html.tera  index-notemp.html  index.html.tera  main.html.tera  rescue.html.tera
(+195 files in other folders)
